Implement granular org/project permissions
Closes #1367
Closes #1432